--- a/2/part2/phonebook/src/App.css
+++ b/2/part2/phonebook/src/App.css
@@ -1,11 +1,11 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,4 +39,45 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+.error {
+  color: red;
+  background-color: lightgrey;
+  font-size: solid;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100vw;
+  padding: 10px; 
+  opacity: 1;
 }
+
+.success {
+  color: green;
+  background-color: lightgrey;
+  font-size: solid;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100vw;
+  padding: 10px; 
+  opacity: 1;
+
+}
+
+/* body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+} */
